--- a/shell/ssh/home.config
+++ b/shell/ssh/home.config
@@ -1,5 +1,6 @@
 Host A1
-  HostName 192.168.68.2
+  #HostName 192.168.68.2
+  HostName 100.90.27.123
   Port 8022
   User admin
   PreferredAuthentications publickey
