--- a/shell/btop/btop.conf
+++ b/shell/btop/btop.conf
@@ -1,8 +1,8 @@
-#? Config file for btop v. 1.2.7
+#? Config file for btop v. 1.2.12
 
 #* Name of a btop++/bpytop/bashtop formatted ".theme" file, "Default" and "TTY" for builtin themes.
 #* Themes should be placed in "../share/btop/themes" relative to binary or "$HOME/.config/btop/themes"
-color_theme = "flat-remix-light"
+color_theme = "Default"
 
 #* If the theme set background should be shown, set to False if you want terminal background transparency.
 theme_background = True
@@ -47,14 +47,14 @@ graph_symbol_net = "default"
 graph_symbol_proc = "default"
 
 #* Manually set which boxes to show. Available values are "cpu mem net proc", separate values with whitespace.
-shown_boxes = "mem net proc cpu"
+shown_boxes = ""
 
 #* Update time in milliseconds, recommended 2000 ms or above for better sample times for graphs.
 update_ms = 2000
 
 #* Processes sorting, "pid" "program" "arguments" "threads" "user" "memory" "cpu lazy" "cpu direct",
 #* "cpu lazy" sorts top process over time (easier to follow), "cpu direct" updates top process directly.
-proc_sorting = "cpu direct"
+proc_sorting = "cpu lazy"
 
 #* Reverse sorting order, True or False.
 proc_reversed = False
@@ -74,11 +74,17 @@ proc_per_core = False
 #* Show process memory as bytes instead of percent.
 proc_mem_bytes = True
 
+#* Show cpu graph for each process.
+proc_cpu_graphs = True
+
 #* Use /proc/[pid]/smaps for memory information in the process info box (very slow but more accurate)
 proc_info_smaps = False
 
 #* Show proc box on left side of screen instead of right.
 proc_left = False
+
+#* (Linux) Filter processes tied to the Linux kernel(similar behavior to htop).
+proc_filter_kernel = False
 
 #* Sets the CPU stat shown in upper half of the CPU graph, "total" is always available.
 #* Select from a list of detected attributes from the options menu.
@@ -161,6 +167,9 @@ only_physical = True
 
 #* Read disks list from /etc/fstab. This also disables only_physical.
 use_fstab = True
+
+#* Setting this to True will hide all datasets, and only show ZFS pools. (IO stats will be calculated per-pool)
+zfs_hide_datasets = False
 
 #* Set to true to show available disk space for privileged users.
 disk_free_priv = False
