--- a/terminal/iterm2/com.googlecode.iterm2.plist
+++ b/terminal/iterm2/com.googlecode.iterm2.plist
@@ -1094,7 +1094,7 @@
 			<key>Minimum Contrast</key>
 			<real>0.0</real>
 			<key>Mouse Reporting</key>
-			<true/>
+			<false/>
 			<key>Name</key>
 			<string>Default</string>
 			<key>Non Ascii Font</key>
