--- a/terminal/tmux/tmux.conf
+++ b/terminal/tmux/tmux.conf
@@ -2,6 +2,9 @@
 # => General
 ###############################################################################
 
+# paste
+ set-option -g default-command "reattach-to-user-namespace -l zsh"
+
 # improve colors
 set -g default-terminal 'screen-256color'
 
