--- a/tools/vcs/git/install.yaml
+++ b/tools/vcs/git/install.yaml
@@ -9,3 +9,6 @@
     ~/.gitattributes: tools/vcs/git/gitattributes
     ~/.gitignore: tools/vcs/git/gitignore
     ~/.gitignore_global: tools/vcs/git/gitignore
+
+- brew:
+    - git
