--- a/system/linux/apt/install.yaml
+++ b/system/linux/apt/install.yaml
@@ -15,3 +15,18 @@
     - nethogs
     - ripgrep
     - jq
+    - make
+    - build-essential
+    - libssl-dev
+    - zlib1g-dev
+    - libbz2-dev
+    - libreadline-dev
+    - libsqlite3-dev
+    - llvm
+    - libncurses5-dev
+    - libncursesw5-dev
+    - xz-utils
+    - tk-dev
+    - libffi-dev
+    - liblzma-dev
+    - python-openssl
