--- a/shell/ssh/home.config
+++ b/shell/ssh/home.config
@@ -16,7 +16,9 @@ Host A2
   ForwardAgent yes
 
 Host A3
-  HostName 192.168.68.11
+  # HostName 192.168.68.11
+  # HostName 10.0.0.11
+  HostName 10.0.0.14
   User root
   PreferredAuthentications publickey
   IdentityFile ~/.ssh/id_rsa
