--- a/terminal/screen/.screenrc
+++ b/terminal/screen/.screenrc
@@ -6,3 +6,95 @@ defscrollback 32000
 
 # Always start `screen` with UTF-8 enabled (`screen -U`)
 defutf8 on
+
+
+# =-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-= #
+# Use this line if you want instant charset mapping from gbk to
+# unicode. Conflict with mutt's unicode setting.
+#defencoding gbk
+
+# hardstatus line
+hardstatus alwayslastline
+#left aligned
+#hardstatus string "%{= R}[%{y}%l%{r}][ %{=b b}%-w%{=rb db}%>%n %t%{-}%+w%{-b}%< %=%{R}][%{G}%c %{M}%D %m-%d%{R}]"
+#center aligned
+#hardstatus string "%{= B}:%{= b}: %{= r}[ %{=b G}%H%{= r} ] %= %{=b b}%-w%{=rb db}%>%n %t%{-}%+w %=%{= r}[ %{G}%c %{M}%D %m-%d %{r}] %{= b}:%{B}:"
+hardstatus string "%{= B}:%{= b}: %{= r}[ %{=b G}%H%{= r} ] %= %{=b b}%-w%{=rb db}%>%n %t%{-}%+w %=%{= r}[ %{G}%D %{M}%m-%d %{r}] %{= b}:%{B}:"
+#caption always "%{= mW} %= %H %="
+#caption always "%{= gk}%-Lw%{= rW}%50> %n%f* %t %{-}%+Lw%< %= %{= Gk} %H %{= rW} %l %{= Gk} %0c:%s %d/%m %{-}"
+#new version from vermaden
+#hardstatus string '%{= M} %H%{= G} %l %= %{= w}%-w%{+b r}%n*%t%{-b r}%{w}%+w %= %{c}%d %D %{B}%c '
+windowlist title  '%{u .g}Num Flags Title%='
+windowlist string '%{.g}%3n %{.y}%f%09=%{-} %t %='
+
+#rendition bell '=rb' 'dr'
+# =-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-= #
+##    Some general options    ##
+
+# Make the xterm scroller work in screen, also works
+# with mouse scrollwheel(does not work...)
+terminfo xterm*|rxvt ti@:te@
+#allow bold
+#attrcolor b ".I"
+## erase background with current bg color
+#defbce "on" 
+#fix rxvt-unicode 256 color problem
+terminfo rxvt-unicode 'Co#256:AB=\E[48;5;%dm:AF=\E[38;5;%dm'
+# tell screen how to set colors. AB = background, AF=foreground
+#terminfo xterm 'Co#256:AB=\E[48;5;%dm:AF=\E[38;5;%dm'
+#dynamic title
+termcapinfo xterm* 'Co#256:XT:hs:ts=\E]2;:fs=\007:ds=\E]2;screen\007'
+term screen-256color
+
+# Automatically detach on hangup, or the screen will keep eating your memory after the terminal emulator has been terminated.
+autodetach on		# default: on
+
+# Refresh the display when exiting programs like vim, nano, irssi and etc.
+altscreen on
+
+#define a large scrollback buffer
+defscrollback 1000
+
+# Set messages timeout to 5 second: 
+msgwait 4
+msgminwait 1
+pow_detach_msg "Screen session of \$LOGNAME \$:cr:\$:nl:ended."
+#version
+# start message:
+startup_message off	# default: on
+
+# use audio bell
+vbell off
+vbell_msg "   Wuff  ----  Wuff!!  "
+
+#nethack style messages
+nethack on
+
+#utf-8 handling
+defutf8 on
+
+attrcolor b ".I"
+
+#use zshell as default shell
+shell zsh
+
+# =-=-=-=-=-=-=-=-=-=-=Key bindings-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-= #
+# bind F1  to select 1
+# bind F7  to detach screen session from this terminal
+# bind F8  to kill current screen window.
+# bind F9  to create a new screen
+# bind F10 to rename current screen window
+# bind F11 to move to previous window
+# bind F12 to move to next window
+#bindkey -k k1 select 1
+#bindkey -k k7 detach
+#bindkey -k k8 kill
+#bindkey -k k9 screen
+#bindkey -k k; title
+bind k kill         # fix K key with old version
+bind s              # prevent screen from freezing on c-a s
+bindkey -k F1 prev
+bindkey -k F2 next
+# Sessions #
+screen
+screen
