--- a/shell/ssh/cloud.config
+++ b/shell/ssh/cloud.config
@@ -5,3 +5,11 @@ Host Y1
   IdentityFile ~/.ssh/id_rsa
   ForwardAgent yes
   StrictHostKeyChecking=no
+
+Host Flowgpt
+  HostName ec2-3-144-93-50.us-east-2.compute.amazonaws.com
+  User ec2-user
+  IdentitiesOnly yes
+  IdentityFile ~/.ssh/axi.pem
+  ForwardAgent yes
+  StrictHostKeyChecking=no
