--- a/terminal/tmux/tmux.conf
+++ b/terminal/tmux/tmux.conf
@@ -1,11 +1,11 @@
 ###############################################################################
 # => General
 ###############################################################################
+# https://github.com/gpakosz/.tmux/blob/master/.tmux.conf
 
 # set vs set-option: set is the alias of set-option
 # et -g is used to set global options and -ga appends values to existing settings.
 # set-window-option (alias setw) 
-
 
 # improve colors
 set -g default-terminal 'screen-256color' # 可选 xterm-256color
@@ -124,17 +124,15 @@ set -g @tpm_plugins '                     \
     tmux-plugins/tmux-prefix-highlight    \
     christoomey/vim-tmux-navigator        \
 '
-# set -g @plugin 'christoomey/vim-tmux-navigator'
+
 # Other examples:
-# set -g @plugin 'tmux-plugins/tpm'
 # set -g @plugin 'github_username/plugin_name'
 # set -g @plugin 'git@github.com/user/plugin'
 # set -g @plugin 'git@bitbucket.com/user/plugin'
 
 # Initialize TMUX plugin manager
 # (keep this line at the very bottom of tmux.conf)
-# run "$XDG_DATA_HOME/tmux/plugins/tpm/tpm"
-run "~/.local/share/tmux/plugins/tpm"
+run "$XDG_DATA_HOME/tmux/plugins/tpm/tpm"
 
 
 ########################################
@@ -171,7 +169,7 @@ bind -n M-= next-window
 # Turn the mouse on, but without copy mode dragging
 set -g mouse on # Enable mouse mode (tmux 2.1 and above)
 setw -g mouse on # Enable mouse mode (tmux 2.1 and above)
-set -g mode-mouse on   #For tmux versions < 2.1
+# set -g mode-mouse on   #For tmux versions < 2.1
 unbind -n MouseDrag1Pane
 unbind -Tcopy-mode MouseDrag1Pane
 
@@ -444,6 +442,7 @@ bind Enter copy-mode # enter copy mode
 
 # Copy mode bind v
 unbind -T copy-mode-vi v
+# Use Vim shortcuts
 setw -g mode-keys vi # 
 
 # Use vi keybindings in copy and choice modes
@@ -588,8 +587,9 @@ set -g assume-paste-time 0
 
 # force a reload of the config file
 # display-message "tmux config reloaded" # create new short cut to reload tmux.conf
+# Make `Ctrl+A R` reload the config file
 unbind r
-bind r source-file ~/.tmux.conf \; display "Reloaded!"
+bind r source-file ~/.tmux.conf # display "Reloaded!"
 
 #
 # alias: tmux=tmux -2u
@@ -680,12 +680,12 @@ bind y set synchronize-panes\; display 'synchronize-panes #{?synchronize-panes,o
 # Local config                         #
 ########################################
 
-run-shell $TMUX_HOME/extraInit
+# run-shell $TMUX_HOME/extraInit
 
 # user defined
 if '[ -f ~/.tmux.conf.local ]' 'source ~/.tmux.conf.local'
 # source -q ~/.tmux.conf.local
-run 'cut -c3- ~/.tmux.conf | sh -s _apply_configuration'
+# run 'cut -c3- ~/.tmux.conf | sh -s _apply_configuration'
 
 # see more http://einverne.github.io/post/2017/12/tmux-plugins.html
 # to install plugins:
