--- a/shell/ssh/config
+++ b/shell/ssh/config
@@ -1,8 +1,5 @@
 Include ~/.orbstack/ssh/config
 
-Include ./home.config
-Include ./cloud.config
-
 Host *
   Protocol 2
   ServerAliveInterval 30
@@ -18,3 +15,49 @@ Host github.com
   Port 443
   PreferredAuthentications publickey
   IdentityFile ~/.ssh/id_rsa
+
+# home
+
+Host A1
+  # HostName 192.168.68.2
+  # HostName 100.90.27.123
+  HostName 10.0.0.2
+  Port 8022
+  User admin
+  PreferredAuthentications publickey
+  IdentityFile ~/.ssh/id_rsa
+  ForwardAgent yes
+
+Host A3
+  # HostName 192.168.68.11
+  HostName 10.0.0.14
+  User root
+  PreferredAuthentications publickey
+  IdentityFile ~/.ssh/id_rsa
+  ForwardAgent yes
+
+# cloud
+
+Host Y1
+  HostName 118.24.105.97
+  User ubuntu
+  IdentitiesOnly yes
+  IdentityFile ~/.ssh/id_rsa
+  ForwardAgent yes
+  StrictHostKeyChecking=no
+
+Host Y2
+  HostName 95.179.186.213
+  User root
+  IdentitiesOnly yes
+  IdentityFile ~/.ssh/id_rsa
+  ForwardAgent yes
+  StrictHostKeyChecking=no
+
+Host Flowgpt
+  HostName ec2-3-144-93-50.us-east-2.compute.amazonaws.com
+  User ec2-user
+  IdentitiesOnly yes
+  IdentityFile ~/.ssh/axi.pem
+  ForwardAgent yes
+  StrictHostKeyChecking=no
