feat: update config

--- a/shell/ssh/install.yaml
+++ b/shell/ssh/install.yaml
@@ -4,7 +4,5 @@
 - link:
     ~/.ssh/config:
       path: shell/ssh/config
-    ~/.ssh/home.config:
-      path: shell/ssh/home.config
-    ~/.ssh/cloud.config:
-      path: shell/ssh/cloud.config
+    # ~/.ssh/home.config:
+      # path: shell/ssh/home.config
