--- a/terminal/tmux/tmux.conf
+++ b/terminal/tmux/tmux.conf
@@ -24,7 +24,7 @@ unbind-key C-z
 set -sg escape-time 10 # faster command sequences
 
 # Address vim-mode switching delay (http://superuser.com/a/252717/65504)
-set -sg repeat-time 600                   # increase repeat timeout
+set -sg repeat-time 600 # increase repeat timeout
 
 # For terminals that support them, propagate these events to programs that
 # understand them.
@@ -100,6 +100,9 @@ set-environment -gu DIRENV_LAYOUT
 # Controlling yank behavior, do not exit after yanking
 set -g @yank_action 'copy-pipe'
 
+# No bells at all
+set -g bell-action none
+
 # Keep windows around after they exit
 set -g remain-on-exit on
 
@@ -146,9 +149,9 @@ run "$XDG_DATA_HOME/tmux/plugins/tpm/tpm"
 
 # Screen like binding，键位绑定，类似 vim 的命令模式
 # C-b + ? 查看所有可用的命令及相应的快捷键
-# 默认是 C-b，这里配置成 C-a
-unbind C-b
+# 默认是 C-b，Change the prefix key to C-a
 set -g prefix C-a
+unbind C-b
 bind C-a send-prefix
 
 set -g prefix2 C-a   # GNU-Screen compatible prefix
@@ -168,8 +171,6 @@ bind -n M-= next-window
 # mouse behavior, Enable mouse + mouse wheel
 # Turn the mouse on, but without copy mode dragging
 set -g mouse on # Enable mouse mode (tmux 2.1 and above)
-setw -g mouse on # Enable mouse mode (tmux 2.1 and above)
-# set -g mode-mouse on   #For tmux versions < 2.1
 unbind -n MouseDrag1Pane
 unbind -Tcopy-mode MouseDrag1Pane
 
@@ -299,10 +300,14 @@ unbind C-z
 # Ring the bell if any background window rang a bell
 set -g bell-action any # 可选 none，禁用 bells
 
+
+# Enable RGB colour if running in xterm(1)
+set-option -sa terminal-overrides ",xterm*:Tc"
+
 # True color and Italic support https://github.com/syl20bnr/spacemacs/wiki/Terminal
 # Default termtype. If the rcfile sets $TERM, that overrides this value.
+# Change the default $TERM to tmux-256color
 set -g default-terminal screen-256color
-set -g terminal-overrides ',xterm-24bit:Tc'
 
 # Keep your finger on ctrl, or don't
 bind ^D detach-client
@@ -534,6 +539,7 @@ set -g status-left ''
 set -g status-left '#[fg=colour235,bg=colour252,bold] ❐ #S #[fg=colour252,bg=colour238,nobold]⮀#[fg=colour245,bg=colour238,bold] #(whoami) #[fg=colour238,bg=colour234,nobold]⮀'
 set -g status-right '#[fg=colour233,bg=colour241,bold] %m/%d #[fg=colour233,bg=colour245,bold] %H:%M:%S '
 # set -g status-right "%H:%M"
+# set -g window-status-current-style "underscore"
 
 # 默认状态栏颜色
 # soften status bar color from harsh green to light gray
@@ -736,3 +742,17 @@ if '[ -f ~/.tmux.conf.local ]' 'source ~/.tmux.conf.local'
 #S (session index)
 #T (pane title)
 #W (currnet task like vim if editing a file in vim or zsh if running zsh)
+
+
+# Create a single default session - because a session is created here, tmux
+# should be started with "tmux attach" rather than "tmux new"
+new -d -s0 -nirssi 'exec irssi'
+set -t0:0 monitor-activity on
+set -t0:0 aggressive-resize on
+neww -d -ntodo 'exec emacs ~/TODO'
+setw -t0:1 aggressive-resize on
+neww -d -nmutt 'exec mutt'
+setw -t0:2 aggressive-resize on
+neww -d
+neww -d
+neww -d
